@@ -1,5 +1,9 @@
 2005-11-10  Kevin P. Fleming  <kpfleming@digium.com>
 
+	* pbx.c: remove apps that were deprecated before 1.0 was released (issue #5673)
+
+	* apps/app_striplsd.c, apps/app_substring.c: remove apps that were deprecated before 1.0 was released (issue #5673)
+
 	* include/asterisk/lock.h (PTHREAD_MUTEX_RECURSIVE_NP): work around header problems on Cygwin (issue #5668)
 
 	* pbx/pbx_ael.c: handle switch default cases inside macros properly (issue #5354)
